--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^2.0.6"
+  },
   "dependencies": {
     "bad-words": "^3.0.3",
     "express": "^4.17.1",
     "socket.io": "^2.3.0"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.6"
+  "engines": {
+    "node": "12.16.3",
+    "npm": "6.14.4"
   }
 }
